--- a/corona.html
+++ b/corona.html
@@ -40,7 +40,7 @@
 <header>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="./index.html">Klima Zelt</a>
+      <a class="navbar-brand" href="./index.html">Climate Tent</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -107,7 +107,7 @@
   <!-- FOOTER -->
   <footer class="container">
     <p class="float-end"><a href="#">Back to top</a></p>
-    <p>&copy; 2021 Klima Zelt &middot; <a href="./kontakt.html">Kontakt</a></p>
+    <p>&copy; 2021 Climate Tent &middot; <a href="./kontakt.html">Kontakt</a></p>
   </footer>
 </main>
 
