--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="container">
           <div class="carousel-caption text-end">
             <h1>Vorträge.</h1>
-            <p>Schau dir eiunen der spannenden Vorträge aus dem Bereich Nachhaltigkeit an.</p>
+            <p>Schau dir einen der spannenden Vorträge aus dem Bereich Nachhaltigkeit an.</p>
             <p><a class="btn btn-lg btn-primary" href="#vortraege">Programm Plan</a></p>
           </div>
         </div>
@@ -156,9 +156,13 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading">Selbsthilfe  Fahrradwerkstatt. <span class="text-muted">Angeboten von LastenVelo.</span></h2>
-        <p class="lead">Bringt euer Kaputtes Rad mit und repariert es mit unterstützung von den Menschen von LastenVelo Werkzeug und Material ist vorhanden.
-		Die mobiele Fahrradwerkstatt ist den ganezn Tag (13-20 Uhr) am Zelt. 
-		Infos zu LastenVelo und wo Ihr ihre Selbsthilfe-Werkstatt sonst findet, gibt es auf ihrer <a href="https://www.lastenvelofreiburg.de/selbsthilfewerkstatt/">Webseite</a>.</p>
+        <p class="lead">Bringt euer Kaputtes Rad mit und repariert es mit
+            unterstützung von den Menschen von LastenVelo. Werkzeug und Material
+            ist vorhanden. Die mobiele Fahrradwerkstatt ist den ganezn Tag 
+            (13-20 Uhr) am Zelt. Infos zu LastenVelo und wo Ihr ihre 
+            Selbsthilfe-Werkstatt sonst findet, gibt es auf ihrer 
+            <a href="https://www.lastenvelofreiburg.de/selbsthilfewerkstatt/">Webseite</a>.
+        </p>
       </div>
       <div class="col-md-5 order-md-1">
         <img src="./pictures/Selbsthilfewerkstatt.png" class="featurette-image img-fluid mx-auto"  width="500" alt="Selbsthilfewerkstatt">
@@ -217,8 +221,11 @@
 	<div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading">Wann und Wo. <span class="text-muted">Wie du uns findest.</span></h2>
-        <p class="lead">Wir sind am 21.10. von 13 Uhr bis 20
-        Uhr auf dem Gelände der Stusi Vauban. Ihr erkennt uns an schwarzen Zelten.</p>
+        <p class="lead">Wir sind am 21.10. von 13 Uhr bis 20 Uhr auf dem
+            Gelände der Stusi Vauban. Ihr erkennt uns an schwarzen Zelten.
+            Die nächste Straßenbahn-Haltestelle ist der Paula-Modersohn-Platz.
+            Nehmt dazu die 3 Richtung Vauban.
+        </p>
         <p><a href="https://www.openstreetmap.org/?mlat=47.97549&amp;mlon=7.82728#map=18/47.97549/7.82728">Größere Karte anzeigen</a></p>
       </div>
       <div class="col-md-5 order-md-1">
