remove carusel and fix img scalling

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 
 <main>
 
+<!--
   <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -83,8 +84,7 @@
         </div>
       </div>
       <div class="carousel-item">
-		<img src="./pictures/Fahrradwerkstatt.jpg" class="d-block w-100 img-so-dasses-past" alt="Selbsthilfewerkstatt">
-        <!--<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>-->
+        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
 
         <div class="container">
           <div class="carousel-caption">
@@ -114,6 +114,22 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
+  </div>
+-->
+
+  <div class="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+
+        <div class="container">
+          <div class="carousel-caption text-start text-shadow">
+              <h1 class="display-1">At<span class="text-success">tent</span>ion to the 
+                  <span class="text-success">Climate</span>.</h1>
+            <p>Am 21.01., 13-20 Uhr an der Vauban Stusi finden ihr uns mit Zelten. Es gibt Vorträge,     Workshops und mehr...</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
 
