add more pictures

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="carousel-caption text-start text-shadow">
               <h1 class="display-1">At<span class="text-success">tent</span>ion to the 
                   <span class="text-success">Climate</span>.</h1>
-            <p>Am 21.01., 13-20 Uhr an der Vauban Stusi finden ihr uns mit Zelten. Es gibt Vorträge,     Workshops und mehr...</p>
+            <p>Am 21.01., 13-20 Uhr an der Vauban Stusie finden ihr uns mit Zelten. Es gibt Vorträge,     Workshops und mehr...</p>
           </div>
         </div>
       </div>
@@ -108,7 +108,8 @@
 		</dl>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+        <img src="./pictures/mic.jpg" class="featurette-image img-fluid mx-auto"
+          width="500" height="500" alt="microphone">
 
       </div>
     </div>
@@ -154,8 +155,8 @@
         <p class="lead">Nimm Teil an einem Workshop deiner Wahl wie z.B. Upcycling.</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-
+        <img src="./pictures/workshop.jpg" class="featurette-image img-fluid mx-auto"
+          width="500" height="500" alt="tools">
       </div>
     </div>
 	
@@ -168,13 +169,14 @@
         vorzustellen oder möchtest ein Workshop anbieten?
 		Du bist Mitglied in einer Gruppe, welche sich fürs Klima einsetzt und
         ihr möchtet euch vorstellen? Oder du willst uns einfach beim Auf- und
-        Abbau unterstützen?	Dann melde dich gerne bei uns unter email
+        Abbau unterstützen?	Dann melde dich gerne bei uns unter
+        <a href="mailto:climate-tent@web.de">climate-tent@web.de</a>
         oder +49 1575 8511849. Auch am Aktionstag könnt ihr noch spontan
         vorbeikommen und mitmachen.</p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-
+        <img src="./pictures/aufbau.jpg" class="featurette-image img-fluid mx-auto"
+          width="500" height="500" alt="aufbau">
       </div>
     </div>
 
@@ -184,7 +186,7 @@
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading">Wann und Wo. <span class="text-muted">Wie du uns findest.</span></h2>
         <p class="lead">Wir sind am 21.10. von 13 Uhr bis 20 Uhr auf dem
-            Gelände der Stusi Vauban. Ihr erkennt uns an schwarzen Zelten.
+            Gelände der Stusie Vauban. Ihr erkennt uns an schwarzen Zelten.
             Die nächste Straßenbahn-Haltestelle ist der Paula-Modersohn-Platz.
             Nehmt dazu die 3 Richtung Vauban.
         </p>
