--- a/kontakt.html
+++ b/kontakt.html
@@ -77,9 +77,9 @@
 	<h2>Kontakt</h2>
 	
 	<p>Birk Ramin<br>
-	Imberyweg 5, 79111 Freiburg<br>
-	email<br>
-	Tel.: +49 1575 8511849 
+	  Imberyweg 5, 79111 Freiburg<br>
+      <a href="mailto:climate-tent@web.de">climate-tent@web.de</a><br>
+	  Tel.: +49 1575 8511849 
 	</p>
 
 
@@ -90,7 +90,9 @@
     Mark Otto, Jacob Thornton, and Bootstrap contributors<br>
     <a href="https://getbootstrap.com/docs/5.0/examples/" target="_blank">https://getbootstrap.com/docs/5.0/examples/</a></p>
 	
-	<p>Bilder von...</p>
+    <p>Corona icons von h2d2_design<br>
+      <a href="https://www.h2d2.de/de/blog/2020/kostenlose-corona-icons/" target="_blang">https://www.h2d2.de/de/blog/2020/kostenlose-corona-icons/</a>
+    </p>
 	<hr class="featurette-divider">
     <!-- /END THE FEATURETTES -->
 
