--- a/corona.html
+++ b/corona.html
@@ -76,19 +76,49 @@
 	
     <div class="row">
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+        <svg class="rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="2g+" preserveAspectRatio="xMidYMid slice" focusable="false">
+            <title>2G+</title>
+            <style>
+              .heavy { font: bold 50px sans-serif; }
+            </style>
+            <rect width="100%" height="100%" fill="#0d6efd"/>
+            <text x="50%" y="50%" fill="#fff" dominant-baseline="middle" text-anchor="middle"class="heavy">2G+</text>
+        </svg>
 
         <h2>2G+</h2>
         <p>Auf der Gesamt Veranstaltung gilt 2G+ nach der aktuellen Corona Verordnung der Landes.</p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-
+          <svg viewBox="0 0 48 48" height="140" class="rounded-circle" xmlns="http://www.w3.org/2000/svg" width="140" focusable="false" role="img" aria-label="Maske" preserveAspectRatio="xMidYMid slice">
+            <rect width="100%" height="100%" fill="#0d6efd"></rect>
+            <g id="Shopicon" fill="#fff">
+	          <rect x="17.048" y="22" width="13.952" height="2"></rect>
+	          <rect x="17.048" y="26" width="13.952" height="2"></rect>
+	          <rect x="19" y="30" width="10" height="2"></rect>
+	          <path d="M14.587,35.935C16.958,38.433,20.298,40,24.005,40c3.707,0,7.049-1.568,9.419-4.066C36.197,35.267,44,28.865,44,24
+		c0-1.761-0.855-5.791-8.452-5.982l-11.544-6.296l-11.543,6.296C4.855,18.205,3.999,22.238,3.999,24
+		C3.999,28.873,11.827,35.286,14.587,35.935z M40,24c0,1.217-1.464,3.072-3.12,4.702c0.074-0.558,0.125-1.124,0.125-1.702v-4.868
+		C38.439,22.329,40,22.815,40,24z M15.005,21.188l9-4.909l9,4.909V27c0,4.963-4.037,9-9,9c-4.962,0-9-4.037-9-9V21.188z
+		 M11.005,22.13V27c0,0.583,0.052,1.153,0.127,1.715C9.47,27.082,7.999,25.22,7.999,24C7.999,22.812,9.568,22.327,11.005,22.13z"></path>
+            </g>
+          </svg>
         <h2>Maskenplicht</h2>
         <p>Es muss eine FFP2 Maske oder eine Maske vergleichbaren Standards getragen werden.</p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+        <svg viewBox="0 0 48 48" height="140" class="rounded-circle" xmlns="http://www.w3.org/2000/    svg" width="140" focusable="false" role="img" aria-label="Maske" preserveAspectRatio="xMidYMid slice">
+          <path d="M0 0h48v48H0z" fill="none"/>
+          <rect width="100%" height="100%" fill="#0d6efd"></rect>
+          <g id="Shopicon" fill="#fff">
+	        <polygon points="16,27.828 16,28 16.172,28 21,32.828 21,28 27,28 27,32.828 31.828,28 32,28 32,27.828 33.829,26 32,24.172 32,24
+		31.828,24 27,19.172 27,24 21,24 21,19.172 16.172,24 16,24 16,24.172 14.171,26 	"/>
+	        <path d="M40,14c1.654,0,3-1.346,3-3s-1.346-3-3-3s-3,1.346-3,3S38.346,14,40,14z"/>
+	        <path d="M40,15c-2.206,0-4,1.794-4,4v8c0,1.474,0.81,2.75,2,3.444V42h4V30.444c1.19-0.694,2-1.969,2-3.444v-8
+		C44,16.794,42.206,15,40,15z"/>
+	        <path d="M10,42V30.444c1.19-0.694,2-1.969,2-3.444v-8c0-2.206-1.794-4-4-4s-4,1.794-4,4v8c0,1.474,0.81,2.75,2,3.444V42H10z"/>
+	        <path d="M8,14c1.654,0,3-1.346,3-3S9.654,8,8,8s-3,1.346-3,3S6.346,14,8,14z"/>
+          </g>
+        </svg>
 
         <h2>Abstand</h2>
         <p>Wenn möglich halte bitte 1,5m Abstand.</p>
