minor changes and fixes in the content

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 			<dd class="col-sm-9">Prof. Dr. Michael Müller über Nachhaltige Pharmacy</dd>
 			
 		</dl>
+        <p>Schau auch später nochmal vorbei für neue Vorträge und Änderungen.</p>
       </div>
       <div class="col-md-5">
         <img src="./pictures/mic.jpg" class="featurette-image img-fluid mx-auto"
@@ -100,10 +101,10 @@
         <h2 class="featurette-heading">Selbsthilfe  Fahrradwerkstatt. <span class="text-muted">Angeboten von LastenVelo.</span></h2>
         <p class="lead">Bringt euer Kaputtes Rad mit und repariert es mit
             unterstützung von den Menschen von LastenVelo. Werkzeug und Material
-            ist vorhanden. Die mobiele Fahrradwerkstatt ist den ganezn Tag 
+            ist vorhanden. Die mobiele Fahrradwerkstatt ist den ganzen Tag 
             (13-20 Uhr) am Zelt. Infos zu LastenVelo und wo Ihr ihre 
             Selbsthilfe-Werkstatt sonst findet, gibt es auf ihrer 
-            <a href="https://www.lastenvelofreiburg.de/selbsthilfewerkstatt/">Webseite</a>.
+            <a href="https://www.lastenvelofreiburg.de/selbsthilfewerkstatt/" target="_blank">Webseite</a>.
         </p>
       </div>
       <div class="col-md-5 order-md-1">
@@ -117,12 +118,16 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading">Diskussion, Austausch und Stockbrot. <span class="text-muted">Chillig.</span></h2>
-        <p class="lead">Kommt vorbei um euch gemüthlich ans Feuer zu setzen und euch über Klima, Nachhaltigkeit und dem Wetter auszutauschen. Wir bieten die Möglichkeit sich zu  Vernetzen,
-		Stockbrot zu essen und die gute Athmosphäre zu geniesen.</p>
+        <p class="lead">Kommt vorbei um euch gemüthlich ans Feuer zu setzen
+          und euch über Klima, Nachhaltigkeit und dem Wetter auszutauschen. 
+          Wir bieten die Möglichkeit sich zu  Vernetzen,
+		  Stockbrot zu essen und die gute Athmosphäre zu geniesen.
+          Students for Future versorgt euch dabei mit leckerem Kuchen.
+        </p>
       </div>
       <div class="col-md-5">
         <img src="./pictures/stockbrot.jpg" class="featurette-image img-fluid mx-auto"
-        width="500" height="500" alt="Selbsthilfewerkstatt">
+        width="500" height="500" alt="Stockbrot">
       </div>
     </div>
 
@@ -164,12 +169,12 @@
 	<div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading">Wann und Wo. <span class="text-muted">Wie du uns findest.</span></h2>
-        <p class="lead">Wir sind am 21.10. von 13 Uhr bis 20 Uhr auf dem
+        <p class="lead">Wir sind am 21.01. von 13 bis 20 Uhr auf dem
             Gelände der Stusie Vauban. Ihr erkennt uns an schwarzen Zelten.
             Die nächste Straßenbahn-Haltestelle ist der Paula-Modersohn-Platz.
             Nehmt dazu die 3 Richtung Vauban.
         </p>
-        <p><a href="https://www.openstreetmap.org/?mlat=47.97549&amp;mlon=7.82728#map=18/47.97549/7.82728">Größere Karte anzeigen</a></p>
+        <p><a href="https://www.openstreetmap.org/?mlat=47.97549&amp;mlon=7.82728#map=18/47.97549/7.82728" target="_blank">Größere Karte anzeigen</a></p>
       </div>
       <div class="col-md-5 order-md-1">
         <div class="ratio ratio-1x1">
