change fahrradwerkstatt text and title of one talk

--- a/index.html
+++ b/index.html
@@ -81,8 +81,10 @@
 			<dt class="col-sm-2">14:00 Uhr</dt>
 			<dd class="col-sm-9">FSC</dd>
 			
-			<dt class="col-sm-2">17:15 Uhr</dt>
-			<dd class="col-sm-9">Prof. Dr. Michael Müller über Nachhaltige Pharmacy</dd>
+			<dt class="col-sm-2">17:30 Uhr</dt>
+			<dd class="col-sm-9">Prof. Dr. Michael Müller über Nachhaltige Pharmazie:
+              eine Utopie, ebenso wie Planetare Gesundheit.
+            </dd>
 			
 		</dl>
         <p>Schau auch später nochmal vorbei für neue Vorträge und Änderungen.</p>
@@ -99,12 +101,18 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading">Selbsthilfe  Fahrradwerkstatt. <span class="text-muted">Angeboten von LastenVelo.</span></h2>
-        <p class="lead">Bringt euer Kaputtes Rad mit und repariert es mit
-            unterstützung von den Menschen von LastenVelo. Werkzeug und Material
-            ist vorhanden. Die mobiele Fahrradwerkstatt ist den ganzen Tag 
-            (13-20 Uhr) am Zelt. Infos zu LastenVelo und wo Ihr ihre 
-            Selbsthilfe-Werkstatt sonst findet, gibt es auf ihrer 
-            <a href="https://www.lastenvelofreiburg.de/selbsthilfewerkstatt/" target="_blank">Webseite</a>.
+        <p class="lead">
+          Bringt euer kaputtes Rad mit und repariert es mit Unterstützung von
+          den Menschen von LastenVelo Freiburg. Sie stehen euch mit Werkzeug
+          und Rat zur Seite damit ihr euer Fahrrad für den alltäglichen
+          Gebrauch wieder fit machen könnt (Fokus auf die Punkte: Platten,
+          Licht, Bremse, Einstellung der Gangschaltung). Die mobile 
+          Fahrradwerkstatt ist den ganzen Tag (13-20 Uhr) am Zelt. Infos zu
+          LastenVelo Freiburg und wo Ihr ihre Selbsthilfe-Werkstatt sonst 
+          findet, gibt es auf ihrer
+          <a href="https://www.lastenvelofreiburg.de/selbsthilfewerkstatt/" target="_blank">
+            Webseite
+          </a>.
         </p>
       </div>
       <div class="col-md-5 order-md-1">
