--- a/index.html
+++ b/index.html
@@ -76,10 +76,14 @@
         <p class="lead">Im laufe des Tages bieten wir verschiedene Vorträge an. Dabei sind:</p>
 		<dl class="row">
 			<dt class="col-sm-2">13:30 Uhr</dt>
-			<dd class="col-sm-9">Nathalie Niekisch (Wandelwerk) über Umweltpsychologie</dd>
+			<dd class="col-sm-9">Nathalie Niekisch (Wandelwerk) über Umweltpsychologie.</dd>
 			
 			<dt class="col-sm-2">14:00 Uhr</dt>
-			<dd class="col-sm-9">FSC</dd>
+			<dd class="col-sm-9">FSC stellt sich vor.</dd>
+
+            <dt class="col-sm-2">18:15 Uhr</dt>
+            <dd class="col-sm-9">Young Explorer Progamm über ihr Projekt "Wildness AG"
+              und Umwelt Aktivismus - Bäume pflanzen.</dd>
 			
 			<dt class="col-sm-2">17:30 Uhr</dt>
 			<dd class="col-sm-9">Prof. Dr. Michael Müller über Nachhaltige Pharmazie:
@@ -180,7 +184,9 @@
         <p class="lead">Wir sind am 21.01. von 13 bis 20 Uhr auf dem
             Gelände der Stusie Vauban. Ihr erkennt uns an schwarzen Zelten.
             Die nächste Straßenbahn-Haltestelle ist der Paula-Modersohn-Platz.
-            Nehmt dazu die 3 Richtung Vauban.
+            Nehmt dazu die 3 Richtung Vauban. Denkt an warme Kleidung, es
+            findet komplett draußen statt. Bitte lest euch auch unser
+            <a href="./corona.html">Corona Hinweise</a> durch.
         </p>
         <p><a href="https://www.openstreetmap.org/?mlat=47.97549&amp;mlon=7.82728#map=18/47.97549/7.82728" target="_blank">Größere Karte anzeigen</a></p>
       </div>
@@ -188,6 +194,25 @@
         <div class="ratio ratio-1x1">
           <iframe width="500" height="500" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=7.823735475540161%2C47.97389971997989%2C7.830816507339478%2C47.97707434213074&amp;layer=mapnik&amp;marker=47.97548705545364%2C7.827275991439819"></iframe>
         </div>
+      </div>
+    </div>
+
+	<hr class="featurette-divider">
+
+    <div class="row featurette">
+      <div class="col-md-7">
+        <h2 class="featurette-heading">Wer sind wir? <span class="text-muted">Über uns.</span></h2>
+        <p class="lead">
+          Wir (Nora, Nathalie, Linus und Birk) sind eine Gruppe von vier Studenten aus Freiburg und 
+          interessieren uns für Umweltschutz und Aktivismus. Mit diesem 
+          Projekt wollen wir zum einen lokalen Gruppen die sich für 
+          Nachhaltigkeit einsetzt eine Bühne bieten. Zum anderen wollen wir
+          jedem die Möglichkeit geben, sich einfach über Nachhaltigkeit zu
+          informieren und wie sie selbst aktiv werden können.
+          Das Projekt läuft im Rahmen das Kurses "Environmental Psychology" der UCF.
+        </p>
+      </div>
+      <div class="col-md-5">
       </div>
     </div>
 
