--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
       <div class="col-md-7">
         <h2 class="featurette-heading">Wer sind wir? <span class="text-muted">Über uns.</span></h2>
         <p class="lead">
-          Wir (Nora, Nathalie, Linus und Birk) sind eine Gruppe von vier
+          Wir (Nora, Natalie, Linus und Birk) sind eine Gruppe von vier
           Studierenden aus Freiburg und 
           interessieren uns für Umweltschutz und Aktivismus. Mit diesem 
           Projekt wollen wir zum einen lokalen Gruppen die sich für 
